--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "aws-cdk": "^1.3.0"
   },
   "dependencies": {
+    "@aws-cdk/aws-codebuild": "^1.3.0",
+    "@aws-cdk/aws-ecr": "^1.3.0",
     "@aws-cdk/aws-sns": "^1.3.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.3.0",
     "@aws-cdk/aws-sqs": "^1.3.0",
