--- a/assets/airflow-docker/buildspec.yml
+++ b/assets/airflow-docker/buildspec.yml
@@ -6,7 +6,6 @@ env:
     BUILD_CONTEXT: "assets/airflow-docker"
     TAG: "latest"
 
-
 phases:
   pre_build:
     commands:
@@ -21,4 +20,4 @@ phases:
       - "docker tag $ECR_QUALIFIED_REPO_NAME:$TAG $ECR_QUALIFIED_REPO_NAME:$DATE_TAG"
       - "docker push $ECR_QUALIFIED_REPO_NAME:$TAG"
       - "docker push $ECR_QUALIFIED_REPO_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION"
-      - "docker push $ECR_QUALIFIED_REPO_NAME:$DATE_TAG
+      - "docker push $ECR_QUALIFIED_REPO_NAME:$DATE_TAG"
