--- a/assets/airflow-docker/Dockerfile
+++ b/assets/airflow-docker/Dockerfile
@@ -74,7 +74,7 @@ COPY entrypoint.sh /entrypoint.sh
 COPY airflow.cfg ${AIRFLOW_USER_HOME}/airflow.cfg
 COPY requirements.txt /requirements.txt
 
-RUN chown -R airflow: ${AIRFLOW_USER_HOME}
+RUN chown -R airflow: ${AIRFLOW_USER_HOME} && chmod +x /entrypoint.sh
 
 EXPOSE 8080 5555 8793
 
