--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@aws-cdk/aws-codebuild": "^1.3.0",
     "@aws-cdk/aws-ecr": "^1.3.0",
+    "@aws-cdk/aws-ecs": "^1.3.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.3.0",
     "@aws-cdk/aws-sns": "^1.3.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.3.0",
     "@aws-cdk/aws-sqs": "^1.3.0",
