--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@aws-cdk/aws-ecr": "^1.3.0",
     "@aws-cdk/aws-ecs": "^1.3.0",
     "@aws-cdk/aws-ecs-patterns": "^1.3.0",
+    "@aws-cdk/aws-rds": "^1.3.0",
     "@aws-cdk/aws-sns": "^1.3.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.3.0",
     "@aws-cdk/aws-sqs": "^1.3.0",
+    "@aws-cdk/aws-ssm": "^1.3.0",
     "@aws-cdk/core": "^1.3.0"
   }
 }
