--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@aws-cdk/aws-ecr": "^1.3.0",
     "@aws-cdk/aws-ecs": "^1.3.0",
     "@aws-cdk/aws-ecs-patterns": "^1.3.0",
+    "@aws-cdk/aws-elasticache": "^1.3.0",
     "@aws-cdk/aws-rds": "^1.3.0",
     "@aws-cdk/aws-sns": "^1.3.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.3.0",
