--- a/assets/airflow-docker/Dockerfile
+++ b/assets/airflow-docker/Dockerfile
@@ -56,7 +56,7 @@ RUN set -ex \
     && if [ -n "${PYTHON_DEPS}" ]; then pip install ${PYTHON_DEPS}; fi
 
 # Install to mount S3 into container https://github.com/s3fs-fuse/s3fs-fuse
-RUN apt-get install -y s3fs jq
+RUN apt-get install -y s3fs jq cron rsyslog && pip install awscli
 
 RUN apt-get purge --auto-remove -yqq $buildDeps \
     && apt-get autoremove -yqq --purge \
@@ -69,11 +69,17 @@ RUN apt-get purge --auto-remove -yqq $buildDeps \
         /usr/share/doc \
         /usr/share/doc-base
 
+COPY sync_dags.sh /sync_dags.sh
 COPY entrypoint.sh /entrypoint.sh
 COPY airflow.cfg ${AIRFLOW_USER_HOME}/airflow.cfg
 COPY requirements.txt /requirements.txt
 
-RUN chown -R airflow: ${AIRFLOW_USER_HOME} && chmod +x /entrypoint.sh && mkdir -p ${AIRFLOW_USER_HOME}/dags && chown -R airflow:airflow ${AIRFLOW_USER_HOME}/dags
+RUN chown -R airflow: ${AIRFLOW_USER_HOME} \
+     && chmod +x /entrypoint.sh \
+     && mkdir -p ${AIRFLOW_USER_HOME}/dags \
+     && chown -R airflow:airflow ${AIRFLOW_USER_HOME}/dags \
+     && chmod +x /sync_dags.sh && echo "*/1 *    * * *   airflow    /sync_dags.sh >> ${AIRFLOW_USER_HOME}/cron.log" >> /etc/crontab \
+     && echo 'EXTRA_OPTS="-L 1"' >> /etc/default/cron && cron
 
 EXPOSE 8080 5555 8793
 
